--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,15 @@
+body {
+  background: #f7f7f7;
+}
+
 .card.card-shadow {
   -webkit-box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.05),
     2px 2px 2px 1px rgba(0, 0, 0, 0.05);
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.05),
     2px 2px 2px 1px rgba(0, 0, 0, 0.05);
+}
+
+.card-title {
+  font-size: 1.3rem;
+  font-weight: bold;
 }
